<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"

    tools:context=".Tambah_Tamu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tambah_tamu_baru"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        tools:text="Tambah Tamu Baru" />

    <EditText
        android:id="@+id/Nama"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nama_anda"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Instansi"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/instansi_perusahaan_anda"
        android:inputType=""
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nomor_Hp"
        tools:hint="Instansi/Perusahaan" />

    <RadioGroup
        android:id="@+id/jenisKelamin"
        android:layout_width="225dp"
        android:layout_height="89dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <RadioButton
            android:id="@+id/Laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/laki_laki"
            android:textColor="@android:color/background_light"
            tools:text="Laki-laki" />

        <RadioButton
            android:id="@+id/Perem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/perempuan"
            android:textColor="@android:color/background_light"
            tools:text="Perempuan" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/nationality"
        android:layout_width="221dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <RadioButton
            android:id="@+id/WNI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wni"
            android:textColor="@android:color/background_light"
            tools:text="WNI" />

        <RadioButton
            android:id="@+id/WNA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wna"
            android:textColor="@android:color/background_light"
            tools:text="WNA" />

    </RadioGroup>

    <EditText
        android:id="@+id/Nomor_Hp"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/nomor_hp"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/jenisKelamin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Nama"
        app:layout_constraintVertical_bias="0.363" />

    <EditText
        android:id="@+id/Card"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/kode_kartu_atau_scan"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/cast_expanded_controller_progress_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationality"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#61a7e8"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:labelFor="@+id/Card"
        android:text="@string/scan"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="klikButtonBalik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/ic_action_left" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/kirim"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="klik_kirim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/Back"
        app:layout_constraintTop_toBottomOf="@+id/scanBtn"
        app:layout_constraintVertical_bias="0.714"
        app:srcCompat="@drawable/ic_action_name" />
</android.support.constraint.ConstraintLayout>