<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:textAlignment="center"
    tools:context=".Login">

    <EditText
        android:id="@+id/editUname"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textUri|textPersonName"
        android:labelFor="@+id/editUname"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editPassWd"
        android:layout_width="333dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@+id/editPassWd"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUname"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/background_dark"
        android:onClick="klikButtonLogin"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassWd"
        app:layout_constraintVertical_bias="0.268" />

</android.support.constraint.ConstraintLayout>